force-app/main/default/objects/FeedbackResponse__c/FeedbackResponse__c.object-meta.xml
<CustomObject>
    <label>Feedback Response</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Feedback Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>