force-app/main/default/objects/FeedbackResponse__c/fields/ChatTranscript__c.field-meta.xml
<CustomField>
    <fullName>ChatTranscript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Feedback Responses</relationshipLabel>
    <relationshipName>Feedback_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>