force-app/main/default/objects/FeedbackResponse__c/fields/EnableSentiment__c.field-meta.xml
<CustomField>
    <fullName>EnableSentiment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sentiment</label>
    <type>Checkbox</type>
</CustomField>