force-app/main/default/objects/FeedbackResponse__c/fields/VoiceCall__c.field-meta.xml
<CustomField>
    <fullName>VoiceCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Feedback Responses</relationshipLabel>
    <relationshipName>Feedback_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>